--- a/src/docs/source/stylesheets/screen.css.scss
+++ b/src/docs/source/stylesheets/screen.css.scss
@@ -545,7 +545,7 @@ html, body {
   blockquote {
     &>p {
       background-color: $code-annotation-bg;
-      padding: $code-annotation-padding 2em;
+      padding: $code-annotation-padding $main-padding;
       color: #eee;
     }
   }
