--- a/src/docs/source/stylesheets/custom/_vars.scss
+++ b/src/docs/source/stylesheets/custom/_vars.scss
@@ -12,17 +12,13 @@ $o-color-dark:     #1A1816;
 $o-color-black:    #100f0e;
 $o-color-hr:       #D6D4CF;
 
-// $o-color-light: #FFFFFF;
-// $o-color-dark: #333333;
 $o-color-darkish: lighten($o-color-dark, 10%);
 $o-color-darker: darken($o-color-dark, 10%);
 $o-color-tint: #DCE3E4;
 $o-color-lightgrey: #7F7F7F;
-// $o-color-red: $o-color-accent-1;
 
 // FONTS
 %default-font {
-  // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: "Oracle Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
@@ -30,8 +26,8 @@ $o-color-lightgrey: #7F7F7F;
   font-size: 14px;
 }
 
-
 // NAV
+$nav-width: 250px;
 $nav-bg: $o-color-browner;
 $nav-active-bg: $o-color-brown;
 $nav-subitem-bg: $o-color-dark;
@@ -41,18 +37,20 @@ $nav-active-text: $o-color-light;
 // CONTENT
 $main-bg:     $o-color-light;
 $main-text:   $o-color-black;
+$main-padding: 15px;
+$main-width-max: 1280px - $nav-width;
 
 // NOTICES
 $notice-alpha:     0.75;
 $aside-notice-bg:  rgba($o-color-blue, $notice-alpha);
-$aside-warning-bg: rgba($o-color-red, $notice-alpha);
+$aside-warning-bg: rgba($o-color-orange, $notice-alpha);
 $aside-success-bg: rgba($o-color-green, $notice-alpha);
 $search-notice-bg: $o-color-orange;
 
 // CODE
-$examples-width:        50%;
+$examples-width:        0%;
 $lang-select-bg:        $o-color-black;
 $lang-select-active-bg: $o-color-blue;
-$examples-bg:           $o-color-brown;
-$code-bg:               $o-color-black;
-$code-annotation-bg:    $o-color-browner;
+$examples-bg:           $o-color-browner;
+$code-bg:               $o-color-dark;
+$code-annotation-bg:    $o-color-brown;
