working settings tool with helm 2-3. include contributors. clipboard

--- a/src/docs/source/stylesheets/custom/_vars.scss
+++ b/src/docs/source/stylesheets/custom/_vars.scss
@@ -54,3 +54,10 @@ $lang-select-active-bg: $o-color-blue;
 $examples-bg:           $o-color-browner;
 $code-bg:               $o-color-dark;
 $code-annotation-bg:    $o-color-brown;
+
+// CLIPBOARD
+$copier-size: 15px;
+$copier-stroke: 2px;
+
+// CONTRIBUTORS
+$contrib-avatar-size: 50px;
