storefront with beta display option and version/build text

--- a/src/storefront/src/templates/pages/index.pug
+++ b/src/storefront/src/templates/pages/index.pug
@@ -71,6 +71,8 @@ block default
       div.uk-margin.uk-text-center
         +link-to-all("see all categories", "catalog.html")
 
+  div.uk-text-center(mu-beta-banner mu-cloak)
+
   //- Trending
   section.uk-section.uk-section-default.uk-section-small
     div.uk-container
