--- a/src/storefront/src/templates/pages/services.pug
+++ b/src/storefront/src/templates/pages/services.pug
@@ -12,14 +12,18 @@ block vars
 
 block embed
 
-  div(mu-service-chart mu-cloak)
+  div(mu-service-chart mu-cloak offset-top="20")
     //- full version
     div(mu-if="!basic")
-      div.tm-ratio.tm-ratio-2-1
+      div.tm-ratio.tm-ratio-16-9
         div.mu-tech.mu-tech-oci.uk-animation-fade(mu-tech-box="OCI" mu-hide="hide.oci")
           img.mu-tech-img.uk-position-top-right(uk-img data-src="images/tech/oci.png")
         div.mu-tech.mu-tech-oke.uk-animation-fade(mu-tech-box="OKE" mu-hide="hide.oke")
           img.mu-tech-img.uk-position-bottom-left(uk-img data-src="images/tech/k8s.png")
+          //- div(class="k8s-tools uk-position-bottom-right uk-visible@s")
+          //-   img.mu-tech-img(uk-img data-src="images/tech/osbroker.png" title="Open Service Broker")
+          //-   img.mu-tech-img(uk-img data-src="images/tech/prometheus.png" title="Prometheus")
+          //-   img.mu-tech-img(uk-img data-src="images/tech/grafana.png" title="Grafana")
         div.mu-tech.mu-tech-edge.uk-animation-fade(mu-tech-box="EDGE" mu-hide="hide.edge")
         figure(mu-chart options="services.chart" onInit="initChart")
 
