--- a/src/storefront/src/templates/pages/about.pug
+++ b/src/storefront/src/templates/pages/about.pug
@@ -41,7 +41,7 @@ block article
             //-     img.mu-tech-img(uk-img data-src="images/tech/osbroker.png" title="Open Service Broker")
             //-     img.mu-tech-img(uk-img data-src="images/tech/prometheus.png" title="Prometheus")
             //-     img.mu-tech-img(uk-img data-src="images/tech/grafana.png" title="Grafana")
-            //- div.mu-tech.mu-tech-edge.uk-animation-fade(mu-tech-box="EDGE" mu-hide="hide.edge")
+            div.mu-tech.mu-tech-edge.uk-animation-fade(mu-tech-box="EDGE" mu-hide="hide.edge")
             figure(mu-chart options="services.chart" onInit="initChart")
         
         //- basic version
