--- a/docs/themes/redwood/layouts/index.html
+++ b/docs/themes/redwood/layouts/index.html
@@ -2,7 +2,7 @@
   {{ if .Site.Home.Content }} 
     {{ .Site.Home.Content }}
   {{ else }}
-    <h1 class="uk-heading-xlarge">¯\_(ツ)_/¯</h1>
+    <h1 class="uk-heading-xlarge rw-accent">¯\_(ツ)_/¯</h1>
     <div class="uk-text-lead">No content</div>
   {{ end }}
 {{ partial "_close.html" . }}
