--- a/docs/themes/redwood/layouts/partials/_open.html
+++ b/docs/themes/redwood/layouts/partials/_open.html
@@ -5,7 +5,7 @@
     
       {{ partial "menu.html" . }}
 
-      <div class="uk-width-expand">
+      <div class="uk-width-expand uk-margin-medium-left uk-margin-medium-right uk-margin-remove-left@s uk-margin-remove-right@s">
         {{ partial "header.html" . }}
         <main>
           {{ partial "toc.html" . }}
