--- a/docs/themes/redwood/layouts/partials/menu-footer.html
+++ b/docs/themes/redwood/layouts/partials/menu-footer.html
@@ -1,5 +1,5 @@
 <div class="uk-text-muted">
-  <div>
+  <div class="uk-margin-small">
     Made with <span uk-icon="icon: heart; ratio: 0.75"></span> by {{ .Site.Params.author }}
   </div>
   Copyright © {{ now.Format "2006" }} {{.Site.Params.organization }} and/or its affiliates. All rights reserved.
