--- a/docs/themes/redwood/layouts/partials/toc.html
+++ b/docs/themes/redwood/layouts/partials/toc.html
@@ -1,8 +1,8 @@
 {{ $toc := (and (not .Params.disableToc) (not .Params.chapter)) }}
 {{ if $toc }}
 <aside id="">
-  <nav role="navigation" class="uk-offcanvas-bar">
-    {{ .TableOfContents }}
+  <nav role="navigation" class="uk-nav" >
+  {{ .TableOfContents }}
   </nav>
 </aside>
 {{ end }}
