--- a/docs/themes/redwood/layouts/partials/head.html
+++ b/docs/themes/redwood/layouts/partials/head.html
@@ -7,11 +7,10 @@
   {{ partial "favicon.html" . }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  {{- $options := (dict "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules")) -}}
+  {{- $options := (dict "outputStyle" "compressed" "enableSourceMap" true "includePaths" (slice "node_modules" "themes/redwood/node_modules")) -}}
   {{- $main := resources.Get "sass/main.scss" | toCSS $options | minify | fingerprint }}
-  {{- $fonts := resources.Get "sass/fonts.scss" | resources.ExecuteAsTemplate "fonts.scss" . | toCSS | minify | fingerprint }}
   <link rel="stylesheet" type="text/css" href="{{ $main.Permalink }}" integrity="{{ $main.Data.Integrity }}">
-  
+  {{- $fonts := resources.Get "sass/fonts.scss" | toCSS (dict "targetPath" "fonts/fonts.css") | minify | fingerprint }}
   <link rel="stylesheet" type="text/css" href="{{ $fonts.Permalink }}" integrity="{{ $fonts.Data.Integrity }}">
   {{ partial "custom-head.html" . }}
 </head>
