--- a/docs/themes/redwood/layouts/partials/search.html
+++ b/docs/themes/redwood/layouts/partials/search.html
@@ -1,4 +1,5 @@
 <form class="uk-search uk-search-default uk-width-expand">
   <span class="uk-search-icon-flip" uk-search-icon></span>
-  <input class="uk-search-input" type="search" placeholder="{{ T "search-placeholder" }}">
+  <input id="search" class="uk-search-input uk-width-expand" type="search" placeholder="{{ T "search-placeholder" }}">
 </form>
+<div id="search-results" class="uk-background-primary uk-text-small"></div>
