--- a/docs/themes/redwood/layouts/partials/_close.html
+++ b/docs/themes/redwood/layouts/partials/_close.html
@@ -1,7 +1,8 @@
-      
-        </main>
+
+          </main>
+        </div> <!-- close body grid -->
         {{ partial "footer.html" . }}
-      </div>
+      </div> <!-- close body -->
     </div> <!-- close main grid -->
     {{ partial "scripts.html" . }}
   </body>
