--- a/docs/themes/redwood/assets/sass/uk/_settings.scss
+++ b/docs/themes/redwood/assets/sass/uk/_settings.scss
@@ -4,8 +4,7 @@
  */
 
 // Configurations
-$o-red: #c74634;
-
+$o-red:        #c74634;
 $o-white:      #fcfbfa;
 $o-black:      #100f0e;
 $o-neutral:    #312d2a;
@@ -30,7 +29,7 @@ $o-darktheme-text:  $o-white;
 
 $o-link-color:           #bc6c37;
 $o-link-secondary-color: #f9dab1;
-$o-inverse-emphasis:   #FBD886;
+$o-inverse-emphasis:     #FBD886;
 
 // Custom UIKit variables and variable overrides
 
@@ -39,13 +38,14 @@ $o-inverse-emphasis:   #FBD886;
 $global-color:                                   $o-theme-text;
 $global-emphasis-color:                          #000;
 $global-muted-color:                             $o-muted;
+$global-font-size:                               16px;
 
 $global-link-color:                              $o-link-color;
 $global-link-hover-color:                        $o-link-color;
 $global-inverse-color:                           $o-darktheme-text;
 
 $global-background:                              $o-theme-bg;
-$global-muted-background:                        lighten($o-grey, 70%);
+$global-muted-background:                        darken($o-theme-bg, 5%);
 $global-primary-background:                      $o-blue;
 $global-secondary-background:                    $o-darktheme-bg;
 $global-success-background:                      $o-green;
@@ -61,10 +61,16 @@ $inverse-global-inverse-color:                   $global-color;
 $inverse-global-primary-background:              $global-primary-background;
 $inverse-global-secondary-background:            $global-secondary-background;
 $inverse-global-muted-background:                rgba($global-inverse-color, 0.1);
+// $inverse-global-muted-background:                $o-darktheme-bg;
 $inverse-global-border:                          rgba($global-inverse-color, 0.2);
 
-$inverse-base-link-color:                        $o-link-secondary-color;
-$inverse-base-link-hover-color:                  $o-link-secondary-color;
+
+// Base
+$base-selection-background:       $o-grey;
+$base-blockquote-font-size:       $global-font-size;
+$inverse-base-link-color:         $o-inverse-emphasis;
+$inverse-base-link-hover-color:   $o-inverse-emphasis;
+$base-em-color:                   $o-brown;
 
 //
 // Typography
@@ -80,32 +86,39 @@ $navbar-nav-item-color:           $global-inverse-color;
 $inverse-navbar-nav-item-color:   $global-inverse-color;
 
 // Nav
-// $inverse-nav-default-item-color:        rgba($global-inverse-color, .8);
-// $inverse-nav-default-item-hover-color:  $inverse-global-emphasis-color;
-$inverse-nav-primary-item-color:        $inverse-global-color;
-$inverse-nav-primary-item-hover-color:  $inverse-global-emphasis-color;
+$inverse-nav-primary-item-color:          $inverse-global-muted-color;
+$inverse-nav-primary-item-hover-color:    $inverse-global-color;
+$inverse-nav-primary-item-active-color:   $inverse-global-emphasis-color;
 
+// Button
+$inverse-button-default-color:              $global-color;
+$inverse-button-default-hover-color:        $global-color;
+$inverse-button-default-active-color:       $inverse-global-color;
+$inverse-button-default-background:         $global-background;
+$inverse-button-default-active-background:  $inverse-global-primary-background;
+// $inverse-button-default-hover-background:   $o-brown-dk;
 
-//
-// Colors
-//
+$inverse-button-secondary-color:              $inverse-global-color;
+$inverse-button-secondary-hover-color:        $inverse-global-color;
+$inverse-button-secondary-active-color:       $inverse-global-color;
+$inverse-button-secondary-background:         $o-brown;
+$inverse-button-secondary-hover-background:   $o-brown-dk;
+$inverse-button-secondary-active-background:  $inverse-global-primary-background;
 
-//
-// Backgrounds
-//
+// Code
+$base-code-color:           $o-brown-lt;
+$inverse-base-code-color:   $inverse-global-muted-color;
 
-//
-// Borders
-//
+// Alert
+$alert-primary-background:  lighten($global-primary-background, 5%);
+$alert-primary-color:       $o-white;
 
-//
-// Spacings
-//
+$alert-success-background:  lighten($global-success-background, 5%);
+$alert-success-color:       $o-white;
 
-//
-// Controls
-//
+$alert-warning-background:  lighten($global-warning-background, 5%);
+$alert-warning-color:       $o-white;
 
-//
-// Z-index
-//
+$alert-danger-background:   lighten($global-danger-background, 5%);
+$alert-danger-color:        $o-white;
+
