--- a/docs/themes/redwood/layouts/partials/head.html
+++ b/docs/themes/redwood/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <base href="{{ .Site.BaseURL }}">
+  <!-- <base href="{{ .Site.BaseURL }}"> -->
   <title>{{ .Title }} :: {{ .Site.Title }}</title>
   
   {{ partial "meta.html" . }}
