--- a/docs/themes/redwood/assets/sass/variables.scss
+++ b/docs/themes/redwood/assets/sass/variables.scss
@@ -1,3 +1,6 @@
 @import "uk/config";
 
 $rw-secondary-font-family: "Georgia", serif;
+$rw-syntax-color:       $o-white;
+$rw-syntax-background:  $o-black;
+$rw-syntax-padding:     $padding-small-padding / 2 $padding-small-padding;
