--- a/docs/themes/redwood/assets/sass/uk/_hooks.scss
+++ b/docs/themes/redwood/assets/sass/uk/_hooks.scss
@@ -7,6 +7,7 @@
    padding: 2px 6px;
    background: rgba($o-beige, 0.4);
    border-radius: 2px;
+   font-style: normal;
  }
 
  @mixin hook-base-blockquote() {
